gcc/testsuite/gm2/iso/fail/badparam4.mod
IMPLEMENTATION MODULE badparam4 ;

PROCEDURE foo (x: CARDINAL) ;
BEGIN

END foo ;

END badparam4.
